# AI-shopping-assistant

./: .env.example  LICENSE  README.md  pyproject.toml
src/: __init__.py  ai_recommender.py  location.py  pricing.py  shopping_assistant.py
src/src/: shopping_assistant.py
