[project]
name = "smart-shopping-assistant"
version = "0.1.0"
description = "AI-powered shopping assistant for Australian shoppers"
authors = [
    {name = "NLIU-DTA ", email = "nliuecu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "googlemaps>=4.10.0",
    "google-generativeai>=0.3.0",
    "google-search-results>=2.4.2",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]


[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
]
